// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`custom props 1`] = `
<div
  style="height: 100%; font-family: system-ui; margin: 0px; display: flex; justify-content: center; align-items: center;"
>
  <div
    style="flex: 0 1 auto; font-size: 4.3em; font-weight: 100; padding-right: 30px;"
  >
    301
  </div>
  <div
    style="flex: 0 1 auto; padding-left: 30px; max-width: 400px; border-left: 1px solid #aeaeae;"
  >
    <div
      style="font-size: 1.3em; font-weight: 300; padding-bottom: 10px;"
    >
      Error name
    </div>
    <div
      style="font-size: 0.9em;"
    >
      Error message
    </div>
    <div
      style="font-size: 0.9em;"
    >
      Error description
    </div>
    <div
      style="padding-top: 20px;"
    >
      <a
        href="/"
      >
        Return to home page
      </a>
    </div>
  </div>
</div>
`;

exports[`default 1`] = `
<div
  style="height: 100%; font-family: system-ui; margin: 0px; display: flex; justify-content: center; align-items: center;"
>
  <div
    style="flex: 0 1 auto; font-size: 4.3em; font-weight: 100; padding-right: 30px;"
  >
    500
  </div>
  <div
    style="flex: 0 1 auto; padding-left: 30px; max-width: 400px; border-left: 1px solid #aeaeae;"
  >
    <div
      style="font-size: 1.3em; font-weight: 300; padding-bottom: 10px;"
    >
      Error
    </div>
    <div
      style="font-size: 0.9em;"
    >
      An error has occurred.
    </div>
    <div
      style="font-size: 0.9em;"
    />
    <div
      style="padding-top: 20px;"
    >
      <a
        href="/"
      >
        Return to home page
      </a>
    </div>
  </div>
</div>
`;
